--- a/.github/workflows/portal-selenium-test.yml
+++ b/.github/workflows/portal-selenium-test.yml
@@ -118,21 +118,8 @@ jobs:
 
         - name: Build Portal modules
           run: |
-            export MAVEN_OPTS="-Xmx3000m"
-            modules=(
-              "AxonIvyPortal/portal-components"
-              "AxonIvyPortal/portal"
-              "AxonIvyPortal/PortalKitTestHelper"
-              "Showcase/portal-user-examples"
-              "Showcase/portal-developer-examples"
-              "Showcase/InternalSupport"
-              "Showcase/portal-components-examples"
-              "AxonIvyPortal/PortalApp"
-              "Showcase/portal-demo-app"
-            )
-            for module in "${modules[@]}"; do
-              mvn clean install -f $module/pom.xml -X -Divy.engine.directory=$ENGINE_DIR
-            done
+            export MAVEN_OPTS="-Xmx3000m -XX:+HeapDumpOnOutOfMemoryError"
+            mvn clean clean verify -f build/module/pom.xml -Divy.engine.directory=$ENGINE_DIR
 
         - name: Deploy Portal Modules
           run: |
