--- a/.github/workflows/portal-selenium-test.yml
+++ b/.github/workflows/portal-selenium-test.yml
@@ -140,6 +140,16 @@ jobs:
           run: |
             cat AxonIvyPortal/portal-selenium-test/target/testEngineOut.log 
 
+        - name: Archive error logs
+          if: job.steps.run-test.status == failure()
+          uses: actions/upload-artifact@v4
+          with:
+            name: error-logs
+            retention-days: 5
+            path: |
+              *.hprof
+              AxonIvyPortal/portal-selenium-test/target/testEngineOut.log 
+
         - name: Archive screenshot image
           uses: actions/upload-artifact@v4
           with:
